@@ -24,6 +24,8 @@ Version 1.7.8
        in repo browser. (Stefan)
 - BUG: Issue #317: progress dlg can't be closed
        with the red X button. (Stefan)
+- BUG: Issue #318: Command URLs with spaces parsed
+       incorrectly. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
